test/negative/parse_unclosed_call.mut
# Negative: missing closing paren in function call
print(42
